--- a/changelog.txt
+++ b/changelog.txt
@@ -1,2 +1,6 @@
+v0.1.2 (2017-07-27)
+- Исправлено отображение параметров
+- В разделы "Фильмы" и "Сериалы" добавил фильтры
+
 v0.1.1 (2017-07-25)
 - Публичный релиз
