--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,8 @@
+v0.1.3 (2017-07-31)
+- Улучшен алгоритм получения данных о контенте
+- Дополнение адаптировано для работы с KODI 18
+- Добавлена обратная совместимость до версии KODI 14.2
+
 v0.1.2 (2017-07-27)
 - Исправлено отображение параметров
 - В разделы "Фильмы" и "Сериалы" добавил фильтры
