--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+v0.1.4 (2017-08-20)
+- Оптимизация кода
+- Выполнена замена иконок разделов на подходящие иконки из используемого скина (в полном объеме работает на Estuary)
+
 v0.1.3 (2017-07-31)
 - Улучшен алгоритм получения данных о контенте
 - Дополнение адаптировано для работы с KODI 18
