--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+v0.1.5 (2017-09-07)
+- Исправление ошибок
+
 v0.1.4 (2017-08-20)
 - Оптимизация кода
 - Выполнена замена иконок разделов на подходящие иконки из используемого скина (в полном объеме работает на Estuary)
