Обновлен адрес сайта Исправлены выявленные ошибки

--- a/plugin.video.zona.mobi/changelog.txt
+++ b/plugin.video.zona.mobi/changelog.txt
@@ -1,3 +1,7 @@
+v0.1.8 (2018-02-18)
+- Обновлен адрес сайта
+- Исправлены выявленные ошибки
+
 v0.1.7 (2018-01-28)
 - Переделан алгоритм кеширования запросов
 
