--- a/plugin.video.zona.mobi/changelog.txt
+++ b/plugin.video.zona.mobi/changelog.txt
@@ -1,3 +1,7 @@
+v0.1.9 (2019-01-08)
+- Обновлен адрес сайта
+- Исправлены ошибки
+
 v0.1.8 (2018-02-18)
 - Обновлен адрес сайта
 - Исправлены выявленные ошибки
