Добавлена возможность указывать адрес сайта в настройках

--- a/plugin.video.zona.mobi/changelog.txt
+++ b/plugin.video.zona.mobi/changelog.txt
@@ -1,3 +1,6 @@
+v0.2.0 (2019-05-25)
+- Добавлена возможность указывать адрес сайта в настройках дополнения
+
 v0.1.9 (2019-01-08)
 - Обновлен адрес сайта
 - Исправлены ошибки
