--- a/plugin.video.zona.mobi/changelog.txt
+++ b/plugin.video.zona.mobi/changelog.txt
@@ -1,3 +1,7 @@
+v0.2.1 (2020-02-03)
+- Обновлен адрес сайта по умолчанию
+- Исправлено получение изображений
+
 v0.2.0 (2019-05-25)
 - Добавлена возможность указывать адрес сайта в настройках дополнения
 
